<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@drawable/data_report_dashboard_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginBottom="16dp"
        android:text="@string/data_report_function"
        android:textColor="@color/data_report_float_button_text1"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/datareport_float_bg"
        android:padding="13dp"
        android:layout_marginBottom="16dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_gravity="center_vertical|left"
            android:text="@string/data_report_mark_view"
            android:drawableLeft="@drawable/datareport_mark_view"
            />

        <CheckBox
            android:id="@+id/mark_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            />

    </FrameLayout>
    <FrameLayout
        android:id="@+id/contextInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/datareport_float_bg"
        android:padding="16dp"
        android:layout_marginBottom="16dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_gravity="center_vertical|left"
            android:text="@string/data_report_context_info"
            />

    </FrameLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginBottom="16dp"
        android:text="@string/data_report_local_data"
        android:textColor="@color/data_report_float_button_text1"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dashboard_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/data_report_line_bg" />
    <FrameLayout
        android:id="@+id/close"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textColor="@color/data_report_float_button_text1"
            android:text="@string/data_report_dashboard_close"
            />

    </FrameLayout>


</LinearLayout>