<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/data_report_dashboard_bg"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:text="@string/data_report_error_title"
            android:padding="16dp"
            android:textSize="15sp"
            android:textColor="@color/data_report_float_button_text1"
            />

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:scrollbars="none"
            >
            <LinearLayout
                android:id="@+id/errorTab"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="total"
                    android:checked="true"
                    android:textColor="@color/error_info_checked_text_color"
                    android:button="@null"
                    />
                <CheckBox
                    android:id="@+id/EventKeyConflictWithEmbedded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="EventKeyConflictWithEmbedded"
                    android:textColor="@color/error_info_checked_text_color"
                    android:button="@null"
                    />
                <CheckBox
                    android:id="@+id/EventKeyInvalid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="EventKeyInvalid"
                    android:textColor="@color/error_info_checked_text_color"
                    android:button="@null"
                    />
                <CheckBox
                    android:id="@+id/LogicalMountEndlessLoop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="LogicalMountEndlessLoop"
                    android:textColor="@color/error_info_checked_text_color"
                    android:button="@null"
                    />
                <CheckBox
                    android:id="@+id/NodeNotUnique"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="NodeNotUnique"
                    android:textColor="@color/error_info_checked_text_color"
                    android:button="@null"
                    />
                <CheckBox
                    android:id="@+id/NodeSPMNotUnique"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="NodeSPMNotUnique"
                    android:textColor="@color/error_info_checked_text_color"
                    android:button="@null"
                    />
                <CheckBox
                    android:id="@+id/ParamConflictWithEmbedded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="ParamConflictWithEmbedded"
                    android:textColor="@color/error_info_checked_text_color"
                    android:button="@null"
                    />
                <CheckBox
                    android:id="@+id/PublicParamInvalid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="PublicParamInvalid"
                    android:textColor="@color/error_info_checked_text_color"
                    android:button="@null"
                    />
                <CheckBox
                    android:id="@+id/UserParamInvalid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="UserParamInvalid"
                    android:textColor="@color/error_info_checked_text_color"
                    android:button="@null"
                    />
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/error_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:padding="16dp"
            android:textSize="15sp"
            android:textColor="@color/data_report_float_button_text1"
            android:text="@string/data_report_copy"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/error_list"
        android:layout_width="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="2"
        android:layout_height="0dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/data_report_line_bg" />
    <FrameLayout
        android:id="@+id/error_close"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textColor="@color/data_report_float_button_text1"
            android:text="@string/data_report_dashboard_close"
            />

    </FrameLayout>


</LinearLayout>